--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,12 @@
 md-dialog {
     opacity: 0;
     min-width: 240px;
-    max-width: 100%;
     max-height: 100%;
-    width:100%;
+    width:60%;
+}
+
+@media screen and (max-width: 700px) {
+    md-dialog { max-width: 100%; width:100%; }
 }
 
 md-dialog md-dialog-content { overflow: hidden; }
