--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,3 +14,12 @@ md-dialog md-dialog-content { overflow: hidden; }
 .angular-google-map-container {
     height: 400px;
 }
+
+
+.logo {
+    text-indent: -9999px;
+    background: url('../img/logo.png') center center no-repeat;
+    background-size: auto 44px;
+    height: 64px;
+    width: 100%;
+}
