--- a/public/css/style.css
+++ b/public/css/style.css
@@ -15,6 +15,8 @@ md-dialog md-dialog-content { overflow: hidden; }
     height: 400px;
 }
 
+.md-list-item-text * {line-height: 100% !important;}
+
 
 .logo {
     text-indent: -9999px;
