--- a/public-android/app/src/main/res/layout/main.xml
+++ b/public-android/app/src/main/res/layout/main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent">
     <WebView
         android:id="@+id/browser"
+        android:visibility="invisible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent" />
