--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,7 +24,7 @@ md-dialog md-dialog-content { overflow: hidden; }
 
 .logo {
     text-indent: -9999px;
-    background: url('../img/logo.png') center center no-repeat;
+    background: url('../img/logo.png') center left no-repeat;
     background-size: auto 44px;
     height: 64px;
     width: 100%;
